--- a/Codigo/Obligatorio/codigo/ArenaGestorFront/src/app/routes/buy/buy.component.html
+++ b/Codigo/Obligatorio/codigo/ArenaGestorFront/src/app/routes/buy/buy.component.html
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <div class="mb-3">
                     <label class="form-label">Cantidad de boletos</label>
-                    <input type="number" class="form-control" name="ammount" [(ngModel)]="amount">
+                    <input type="number" min="0" class="form-control" name="ammount" [(ngModel)]="amount" (keyup)="onChange($event)">
                 </div>
                 <div class="my-3">
                     <table class="table table-striped">
