--- a/Codigo/Obligatorio/codigo/ArenaGestorFront/src/app/routes/snacks/snacks-form.component.html
+++ b/Codigo/Obligatorio/codigo/ArenaGestorFront/src/app/routes/snacks/snacks-form.component.html
@@ -7,11 +7,11 @@
       <div class="card-body">
         <div class="mb-3">
           <label class="form-label">Nombre</label>
-          <input type="text" class="form-control" name="name" [(ngModel)]="model.name">
+          <input type="text" class="form-control" name="name" [(ngModel)]="name">
         </div>
         <div class="mb-3">
           <label class="form-label">Descripción</label>
-          <input type="text" class="form-control" name="description" [(ngModel)]="model.description">
+          <input type="text" class="form-control" name="description" [(ngModel)]="description">
         </div>
         <div class="mb-3">
           <label class="form-label">Precio</label>
